# Django-projects

Django (forms)/project/: db.sqlite3
Django (forms)/project/forms/: admin.py  models.py  views.py
Django (forms)/project/forms/migrations/: 0001_initial.py
Django (forms)/project/project/: settings.py  urls.py
Django (forms)/project/templates/: base.html  forms.html  homepage.html  results.html
Django-pollsproject/: cmd_text.txt
Django-pollsproject-/project/django-polls/django_polls/: admin.py  models.py
Django-pollsproject-/project/django-polls/django_polls/migrations/: 0001_initial.py
Django-pollsproject-/project/templates/: base.html
Django-pollsproject-/project/templates/home/: home.html
Django-pollsproject-/project/templates/polls/: detail.html
Django-pollsproject/Dist and requirements/: requirements.txt
Django-pollsproject/project/: db.sqlite3
Django-pollsproject/project/django-polls/: pyproject.toml
Django-pollsproject/project/django-polls/django_polls/: views.py
Django-pollsproject/project/django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt
Django-pollsproject/project/project/: settings.py  urls.py
Django-pollsproject/project/templates/admin/: base_site.html
Django-pollsproject/project/templates/polls/: index.html  results.html
